# AITerminal

./: Cargo.toml  dog.html  index.html
my-fs-mcp/: Cargo.toml
my-fs-mcp/src/: main.rs
src/: cmd.rs  command_policy.rs  handler.rs  main.rs  sys.rs  utils.rs
src/groq/: audio.rs  client.rs  mod.rs  types.rs
