[package]
name = "ai-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
dirs-next = "2"
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
dotenvy = "0.15"
